--- a/day2/my-app/src/app/components/search/app.xsearch.html
+++ b/day2/my-app/src/app/components/search/app.xsearch.html
@@ -3,13 +3,13 @@
 	<form class="weui-search-bar__form">
 		<div class="weui-search-bar__box">
 			<i class="weui-icon-search"></i>
-			<input [(ngModel)]="name" type="search" class="weui-search-bar__input" id="searchInput" placeholder="搜索" required="">
-			<a href="javascript:" class="weui-icon-clear" id="searchClear"></a>
+			<input [(ngModel)]="inputsearch" name="inputsearch" type="search" class="weui-search-bar__input" id="searchInput" placeholder="搜索" required="">
+			<a (click)="searchClear()" href="javascript:" class="weui-icon-clear" id="searchClear"></a>
 		</div>
 		<label (click)="showSearchInput()" class="weui-search-bar__label" id="searchText" style="transform-origin: 0px 0px 0px; opacity: 1; transform: scale(1, 1);">
                     <i class="weui-icon-search"></i>
                     <span>搜索</span>
                 </label>
 	</form>
-	<a (click)="hideSearchInput()" href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel">{{name}}</a>
+	<a (click)="hideSearchInput()" href="javascript:" class="weui-search-bar__cancel-btn" id="searchCancel">取消</a>
 </div>
